# SDL_Crossplatform_Local

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  deploy.sh  install.sh  mingw-toolchain.cmake
Scripts/: build.sh  build_sdl.sh  deploy.sh  install.sh  package_installation.sh  test_binaries.sh
Scripts/SDL2_build/: build_sdl.sh  package_installation.sh  reset_sdl_submodules.sh
Scripts/SDL2_build/build_lib/: shared_linux.sh  shared_windows.sh  static_linux.sh
cmake/toolchains/: dll_build.cmake
src/: main.cpp
